# borealis

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  README.md  SConstruct  borealisscreenrc  config.ini  config_new.ini  config_testing.ini  hdw.dat.sas  install_radar_deps.py  install_radar_deps_opensuse.sh  install_radar_deps_ubuntu.sh  merge_logs.sh  mode  pyproject.toml  restart_borealis.py  restrict.dat.cly  restrict.dat.inv  restrict.dat.pgr  restrict.dat.sas  restrict.dat.wal  sconstruct  start_radar.sh  steamed_hams.py  steamed_hams.sh  stop_radar.sh
.github/workflows/: black.yml  documentation-links.yml
borealis/: brian.py  data_write.py  experiment_handler.py  radar_control.py  realtime.py  rx_signal_processing.py
borealis/experiment_prototype/: experiment_exception.py  experiment_prototype.py  key_description.txt
borealis/experiments/: 2multifsound.py  borealis_paper.py  epopsound_one_beam.py  (+28 more)
brian/: brian.py
clocks/: fury.cpp  fury.hpp
daemon/: log_config.py  sentinel.py
data_write/: data_write.py
docs/: .readthedocs.yaml  Doxyfile  Makefile  conf.py  file_docs_builder.py  index.rst  requirements.txt
experiment/: README  controlprog.py  cp_object.py  cpo_masher.py  cpobject.py  currentctrlprog.py  experiment.py  myexperiment.py  radar_classes.py  radarctrl.py  runradar.py  test_server.py
experiment_handler/: cpobject.py  experiment_handler.py
experiment_prototype/: experiment_exception.py  experiment_prototype.py  list_tests.py
experiments/: 2multifsound.py  IB_collab_mode.py  IB_collab_mode_13.py  beam_test_15_boxes.py  bistatic_test.py  blank_experiment.py  borealis_paper.py  epop2023.py  epopsound.py  epopsound_one_beam.py  experiment_exception.py  experiment_prototype.py  full_fov.py  full_fov_15km.py  full_fov_2freq.py  full_fov_comparison.py  fullscanstepmode.py  haarpscan.py  impttest.py  interleavedscan.py  interleavedsound.py  interleavesound.py  list_tests.py  listening_normalscan_1.py  listening_normalscan_2.py  multifreq_widebeam.py  narrow_wide_comparison.py  normalscan-7-pul.py  normalscan.py  normalscan_13MHz.py  normalscan_boresite.py  normalscan_imp.py  normalscan_low_bw.py  normalscan_single_beam.py  normalsound.py  one_box_test_experiment.py  politescan.py  politescan2.py  politescan_1_box.py  power_meter_mode.py  (+14 more)
n200_gpio_test/: .n200_gpio_test.cpp.swp  SConscript  n200_gpio_test.cpp
radar_control/: README  radar_control.py  radar_status.py  sample_building.py  samplebuild.py
radar_status/: radar_status.py
radarcontrol/: README  controlprog.py  cpobject.py  radar_classes.py  runradar.py  testserver.py
realtime/: realtime.py
rx_signal_processing/: SConscript  decimate.cu  decimate.hpp  dsp.cu  dsp.hpp  dsp.py  filtering.cpp  filtering.hpp  remez.c  reprocessing.py  rx_dsp_chain.cu  rx_signal_processing.py  test_reprocessing.py
sample_building/: sample_building.py
scheduler/: email_utils.py  local_scd_server.daemon  local_scd_server.py  local_scd_server.service  quick_test_scdutils.py  remote_server.py  remote_server_options.py  scd_utils.py  schedule_modifier.py  scheduler_sync.daemon  sync_schedules.daemon
scripts/: general.py  install_radar_deps.py  merge_logs.sh  restart_borealis.daemon  restart_borealis.py  start_radar.sh  steamed_hams.py  stop_radar.sh
signal_processing/: SConscript  digital_processing.cu  digital_processing.hpp  remez.c  remez.h  remez_old.something  sig_proc.cu
site_scons/: site_config.py  site_init.py  site_utils.py
src/: __init__.py  brian.py  data_write.py  experiment_handler.py  radar_control.py  radar_status.py  realtime.py  rx_signal_processing.py  sentinel.py  usrp_driver.py
testing/: README.md  checkOverlap.py  decimator.py  filter.py  frerking.py  frerking.tex  plotfilterresponses.py  test_signals.py
tests/: README.md  set_affinity.py  set_affinity_options.py
tools/: README.md
usrp_drivers/: SConscript  get_tids.sh  set_affinity.py  usrp.cpp  usrp.hpp  usrp.py  usrp_driver.cpp  usrp_driver.py  usrp_drivers.py
utils/: SConscript  sconstruct__
watcher/: watcher.py
(+811 files in other folders)
