[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "borealis"
version = "0.7"
description = "SuperDARN Digital Radar System"
readme = "README.md"
authors = [{name = "SuperDARN Canada"}]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "backscatter @ git+https://github.com/SuperDARNCanada/backscatter.git",
    "darn-dmap>=0.1.6",
    "graypy",
    "h5py>=3.3.0",
    "inotify",
    "numpy<2",
    "posix_ipc",
    "pydantic>=2",
    "pyDARNio @ git+https://github.com/SuperDARN/pyDARNio.git@borealis_v1",
    "rich",
    "scipy",
    "structlog==24.1.0",
    "zmq",
]

[project.optional-dependencies]
gpu = ["cupy"]
dev = [
    "ruff",
    "pre-commit",
    "jupyter"
]

[project.urls]
Homepage = "https://borealis.readthedocs.io"

[project.scripts]
steamed_hams = "scripts.steamed_hams:main"
restart_borealis = "scripts.restart_borealis:main"

[tool.setuptools.packages.find]
where = ["borealis", "build"]
exclude = ["usrp_drivers", "src.borealis_experiments.testing_archive*"]

[tool.ruff]
include = [
    "scheduler/**/*.py",
    "scripts/**/*.py",
    "src/**/*.py",
    "tests/**/*.ipynb",
    "tests/**/*.py",
    "**/pyproject.toml"
]
extend-exclude = [
    "src/borealis_experiments/**/*.py",
    "tests/archive/**/*",
]

[tool.ruff.lint]
ignore = ["E402"]   # Module level import not at top of file (required for sys.path.append() before import)
